Fix social icons alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -223,6 +223,10 @@ mark {
     color: rgba(0, 0, 0, 0.5) !important;
 }
 
+.social a:first-child {
+    margin-left: 0;
+}
+
 /* Partial: Translations */
 .translations {
     display: flex;
